# dev-guru

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  specs.md
src/: config.py  models.py  prompts.py  providers.py  router.py  security.py  self_consult.py  server.py  services.py  skill_models.py
src/routes/: skills.py
tests/: test_prompts.py  test_router.py  test_security.py
