[project]
name = "dev-consultant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.9",
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.0",
    "google-genai>=1.66.0",
    "openai>=2.26.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
